Hide mobile nav title to prevent overlap

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -929,6 +929,14 @@ html[lang="en"] .thoughts-layout :where(:not(pre, code, kbd, samp, svg, svg *)) 
 
 /* Mobile (Under 600px) */
 @media (max-width: 599px) {
+  .VPNavBar .title {
+    display: none !important;
+  }
+
+  .VPNavBar .content {
+    padding-left: 0 !important;
+  }
+
   .VPNavBarTitle .title::after {
     font-size: 18px !important;
   }
